Fixed the issue with the wrapper class not covering the full screen. This concludes the basic styling of the site, Will revist styling at the end to style the 2 new pages we will have and polish the styling everywhere. We should have enough right now to get an idea

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@ body {
 	background-color: #e8e9f3;
 	font-size: 25px;
 	text-align: center;
+
+	background: linear-gradient(45deg, #d9a7c7, #fffcdc);
+	background-size: 600% 100%;
+	animation: gradient 12s linear infinite;
+	animation-direction: alternate;
 }
 
 a {
@@ -303,16 +308,6 @@ a:hover {
 }
 
 /* Gradient Styling */
-.wrapper {
-	z-index: -1;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	background: linear-gradient(45deg, #d9a7c7, #fffcdc);
-	background-size: 600% 100%;
-	animation: gradient 12s linear infinite;
-	animation-direction: alternate;
-}
 @keyframes gradient {
 	0% {
 		background-position: 0%;
